# DarkSpaceV2

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
AppGui/: main.qml
AppGui/ClientPage/: ClientPage.qml
AppGui/ClientPage/ChatListView/: ChatBlock.qml  ChatListView.qml  ChatSearchLine.qml
AppGui/ClientPage/CorrespondenceView/: ChatPersonalBar.qml  CorrespondenceView.qml  InputMessageField.qml  MessageUnit.qml
AppGui/DialogWindows/MoreDialogWindow/: MoreDialogWindow.qml  OptionBlock.qml
AppGui/MoreOptionPages/ChatOptionPages/: AddNewChatPage.qml
AppGui/SharedComponents/Buttons/: CustomButton.qml
AppGui/SharedComponents/ScrollBars/: CustomScrollBar.qml
AppGui/SharedComponents/TextEditors/: CustomTextEditor.qml
AppGui/SharedComponents/TextFields/: CustomTextField.qml
AppGui/SignInPages/: SignInPage.qml  SignUpPage.qml
AppGui/ViewControllers/: PageSwitcher.qml
Client/: CMakeLists.txt
Client/Source/: CMakeLists.txt  Main.cpp
Client/Source/AppGui/: WelcomePage.qml  main.qml  qml.qrc
Client/Source/AppGui/ClientPage/: ClientPage.qml
Client/Source/AppGui/ClientPage/ChatListView/: ChatBlock.qml  ChatListView.qml  ChatSearchLine.qml
Client/Source/AppGui/ClientPage/CorrespondenceView/: ChatPersonalBar.qml  CorrespondenceScene.qml  CorrespondenceView.qml  InputMessageField.qml  MessageUnit.qml
Client/Source/AppGui/ClientPage/SettingsBar/: SettingsBar.qml
Client/Source/AppGui/DialogWindows/: MoreDialogWindow.qml
Client/Source/AppGui/DialogWindows/MoreDialogWindow/: MoreDialogWindow.qml  OptionBlock.qml  OptionList.qml
Client/Source/AppGui/MoreOptionPages/ChatOptionPages/: AddNewChatPage.qml
Client/Source/AppGui/SharedComponents/Buttons/: CustomButton.qml
Client/Source/AppGui/SharedComponents/ScrollBars/: CustomScrollBar.qml
Client/Source/AppGui/SharedComponents/SharedProperties/: SharedProperties.qml
Client/Source/AppGui/SharedComponents/TextEditors/: CustomTextEditor.qml
Client/Source/AppGui/SharedComponents/TextFields/: CustomTextField.qml
Client/Source/AppGui/SignInPages/: SignInPage.qml  SignUpPage.qml
Client/Source/AppGui/ViewControllers/: PageSwitcher.qml
Client/Source/Client/: CMakeLists.txt  Client.cpp  Client.h
Client/Source/Client/UserData/: CMakeLists.txt
Client/Source/Client/UserData/include/: UserData.h
Client/Source/Client/UserData/source/: UserData.cpp
CommonLib/: CMakeLists.txt
CommonLib/Messages/: CMakeLists.txt  Message.cpp  Message.h  MessageFactory.cpp  MessageFactory.h  TextMessage.cpp  TextMessage.h
CommonLib/Package/: CMakeLists.txt  Package.h
Dependencies/: CMakeLists.txt
Dependencies/NetLib/CommonLib/: CMakeLists.txt
Dependencies/NetLib/CommonLib/ISingleton/: ISingleton.cpp  ISingleton.h
Dependencies/NetLib/CommonLib/Protocol/: Protocol.h
Dependencies/NetLib/CommonLib/Socket/: ClientTcpSocket.cpp  ClientTcpSocket.h  ServerTcpSocket.cpp  ServerTcpSocket.h  Socket.cpp  Socket.h  SocketAddress.cpp  SocketAddress.h
Dependencies/NetLib/CommonLib/Utils/: WSA_Utils.cpp  WSA_Utils.h
Dependencies/Qt/: CMakeLists.txt
Resource/AppIcon/: AppIcon.rc
Server/: CMakeLists.txt  Main.cpp  Server.cpp  Server.h
Server/Server/: CMakeLists.txt  Server.cpp  Server.h
Tests/: CMakeLists.txt  test_main.cpp
cmake/: deploy.cmake
